--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -9,12 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="5dp"
+        card_view:cardUseCompatPadding="true"
         card_view:cardElevation="5dp"
         android:id="@+id/imageView">
 
         <LinearLayout
             android:background="?android:attr/selectableItemBackground"
             android:orientation="vertical"
+            android:layout_margin="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
